force-app/main/default/objects/Order_Fulfillment__c/Order_Fulfillment__c.object-meta.xml
<CustomObject>
    <label>Order Fulfillment</label>
    <nameField>
        <displayFormat>OF-{000000}</displayFormat>
        <label>Order Fulfillment Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Fulfillments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>