force-app/main/default/objects/Order_Fulfillment__c/fields/ACDF_Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Parent_Company__c</fullName>
    <formula>PrimaryRecipient__r.ACDF_Parent_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Parent Company</label>
    <type>Text</type>
</CustomField>