force-app/main/default/objects/Order_Fulfillment__c/fields/Activity_Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Activity_Days_Overdue__c</fullName>
    <formula>IF( Profession__c = &quot;WM&quot;, IF( Upload_Date__c &gt; Today(), 0, Today() - LastActivityDate), Today() - LastActivityDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>