force-app/main/default/objects/Order_Fulfillment__c/fields/Ad_Prod_Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ad_Prod_Alternate_Phone__c</fullName>
    <label>Ad Prod Alternate Phone</label>
    <type>Phone</type>
</CustomField>