force-app/main/default/objects/Order_Fulfillment__c/fields/Alternate_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Phone__c</fullName>
    <formula>OrderNumber__r.Alternate_Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternate Contact Phone</label>
    <type>Text</type>
</CustomField>