force-app/main/default/objects/Order_Fulfillment__c/fields/AM_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>AM_Full_Name__c</fullName>
    <formula>OrderNumber__r.Opportunity__r.FSP_Sales_Rep__r.FirstName + &quot; &quot; + OrderNumber__r.Opportunity__r.FSP_Sales_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>AM Name as shown on order</inlineHelpText>
    <label>AM Full Name</label>
    <type>Text</type>
</CustomField>