force-app/main/default/objects/Order_Fulfillment__c/fields/Brochure_Type__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Type__c</fullName>
    <formula>TEXT(OrderProductLine__r.Brochure_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brochure Type</label>
    <type>Text</type>
</CustomField>