force-app/main/default/objects/Order_Fulfillment__c/fields/Build_Reprint_from_Profile__c.field-meta.xml
<CustomField>
    <fullName>Build_Reprint_from_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reprint checklist field</description>
    <inlineHelpText>Once the template is approved, build the reprint from the existing profile</inlineHelpText>
    <label>Build Reprint from Profile</label>
    <type>Checkbox</type>
</CustomField>