force-app/main/default/objects/Order_Fulfillment__c/fields/Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date__c</fullName>
    <label>Campaign End Date</label>
    <type>Date</type>
</CustomField>