force-app/main/default/objects/Order_Fulfillment__c/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>