force-app/main/default/objects/Order_Fulfillment__c/fields/CC_Editor_Product__c.field-meta.xml
<CustomField>
    <fullName>CC_Editor_Product__c</fullName>
    <label>CC Editor Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>