force-app/main/default/objects/Order_Fulfillment__c/fields/Client_Approval_Deadline_hidden__c.field-meta.xml
<CustomField>
    <fullName>Client_Approval_Deadline_hidden__c</fullName>
    <formula>Market__r.Auto_Client_Approval_Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Approval Deadline</label>
    <type>Date</type>
</CustomField>