force-app/main/default/objects/Order_Fulfillment__c/fields/Client_Contact_List_2__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_List_2__c</fullName>
    <description>This is a url to a second client contact list (currently used for email lists for the EL e-magazine subscriptions)</description>
    <inlineHelpText>This is a url to a second client contact list (currently used for email lists for the EL e-magazine subscriptions)</inlineHelpText>
    <label>Client Contact List 2</label>
    <type>Url</type>
</CustomField>