force-app/main/default/objects/Order_Fulfillment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fulfillments (Contact)</relationshipLabel>
    <relationshipName>Order_Fulfillments1</relationshipName>
    <type>Lookup</type>
</CustomField>