force-app/main/default/objects/Order_Fulfillment__c/fields/Contact_Block_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Block_Email__c</fullName>
    <label>Contact Block Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>