force-app/main/default/objects/Order_Fulfillment__c/fields/CSR_Campaign__c.field-meta.xml
<CustomField>
    <fullName>CSR_Campaign__c</fullName>
    <description>This field is used to create custom list view campaigns for the CSR team.</description>
    <label>CSR Campaign</label>
    <length>250</length>
    <type>Text</type>
</CustomField>