force-app/main/default/objects/Order_Fulfillment__c/fields/CST_URL__c.field-meta.xml
<CustomField>
    <fullName>CST_URL__c</fullName>
    <formula>PrimaryRecipient__r.Client_Success_Tracker_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CST URL</label>
    <type>Text</type>
</CustomField>