force-app/main/default/objects/Order_Fulfillment__c/fields/CTA_Message__c.field-meta.xml
<CustomField>
    <fullName>CTA_Message__c</fullName>
    <label>CTA Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>