force-app/main/default/objects/Order_Fulfillment__c/fields/Date_FB_Post_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_FB_Post_Updated__c</fullName>
    <description>Date of the most recent update to this fulfillment&apos;s FB Post record. Only applicable to Social Media fulfillments.</description>
    <inlineHelpText>Date of the most recent update to this fulfillment&apos;s FB Post record. Only applicable to Social Media fulfillments.</inlineHelpText>
    <label>Date FB Post Updated</label>
    <type>DateTime</type>
</CustomField>