force-app/main/default/objects/Order_Fulfillment__c/fields/Date_Sent_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Vendor__c</fullName>
    <description>Shows date product was sent to vendor</description>
    <label>Date Sent to Vendor</label>
    <type>Date</type>
</CustomField>