force-app/main/default/objects/Order_Fulfillment__c/fields/Days_Since_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Upload_Date__c</fullName>
    <formula>TODAY()- Market_Final_Upload_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Upload Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>