force-app/main/default/objects/Order_Fulfillment__c/fields/Delivered_on_date__c.field-meta.xml
<CustomField>
    <fullName>Delivered_on_date__c</fullName>
    <description>This is the date the product was actually delivered to the client.</description>
    <label>Delivered on (date)</label>
    <type>Date</type>
</CustomField>