force-app/main/default/objects/Order_Fulfillment__c/fields/Digital_Spotlight_CAR__c.field-meta.xml
<CustomField>
    <fullName>Digital_Spotlight_CAR__c</fullName>
    <label>Digital Spotlight CAR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>