force-app/main/default/objects/Order_Fulfillment__c/fields/Digital_Spotlight_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Digital_Spotlight_Photo_URL__c</fullName>
    <description>URL of customer photo to be used on cover of Digital Spotlight Award product.</description>
    <inlineHelpText>URL of customer photo to be used on cover of Digital Spotlight Award product.</inlineHelpText>
    <label>Digital Spotlight Photo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>