force-app/main/default/objects/Order_Fulfillment__c/fields/Display_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Contact_Last_Name__c</fullName>
    <formula>BLANKVALUE(PrimaryRecipient__r.Display_Last_Name__c, PrimaryRecipient__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display/Contact Last Name</label>
    <type>Text</type>
</CustomField>