force-app/main/default/objects/Order_Fulfillment__c/fields/EL_E_Magazine_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>EL_E_Magazine_Purchaser__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This client purchased the Essential Living E-Magazine</inlineHelpText>
    <label>EL E-Magazine Purchaser</label>
    <type>Checkbox</type>
</CustomField>