force-app/main/default/objects/Order_Fulfillment__c/fields/EL_Quantity__c.field-meta.xml
<CustomField>
    <fullName>EL_Quantity__c</fullName>
    <description>Current quantity of Essential Living Personal Magazine Subscription Copies (can update over time if changes are made to the order)</description>
    <inlineHelpText>Current quantity of Essential Living Personal Magazine Subscription Copies (can update over time if changes are made to the order. This field is updated manually)</inlineHelpText>
    <label>EL Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>