force-app/main/default/objects/Order_Fulfillment__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <description>This field is used by rules and email alerts to select which email template to send to the client (e.g. social post product delivery email alerts)</description>
    <label>Email Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Social Post - Announcement</fullName>
            </value>
            <value>
                <fullName>Social Post - Mag pub</fullName>
            </value>
            <value>
                <fullName>Social Post - Find me on FSP</fullName>
            </value>
            <value>
                <fullName>Social Post - Call for noms</fullName>
            </value>
            <value>
                <fullName>Social Post - Client sat</fullName>
            </value>
            <value>
                <fullName>Social Post - Client website</fullName>
            </value>
            <value>
                <fullName>Social Post - Heat</fullName>
            </value>
            <value>
                <fullName>Social Post - Share your story</fullName>
            </value>
            <value>
                <fullName>Social Post - Testimonials</fullName>
            </value>
            <value>
                <fullName>Social Post - Working with winner</fullName>
            </value>
            <value>
                <fullName>Social Post - Video</fullName>
            </value>
            <value>
                <fullName>Send Product Delivered Link</fullName>
            </value>
            <value>
                <fullName>Send CST</fullName>
            </value>
            <value>
                <fullName>Social Post - 5 Point</fullName>
            </value>
            <value>
                <fullName>Social Post - HGTV</fullName>
            </value>
            <value>
                <fullName>Social Post - FML</fullName>
            </value>
            <value>
                <fullName>Social Post - Client Thank You</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>