force-app/main/default/objects/Order_Fulfillment__c/fields/Emblem_URL__c.field-meta.xml
<CustomField>
    <fullName>Emblem_URL__c</fullName>
    <description>URL for location of customer&apos;s completed Emblem image.</description>
    <inlineHelpText>URL for location of customer&apos;s completed Emblem image.</inlineHelpText>
    <label>Emblem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>