force-app/main/default/objects/Order_Fulfillment__c/fields/First_Inscription_Attempt__c.field-meta.xml
<CustomField>
    <fullName>First_Inscription_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when sending the first subscription info email</inlineHelpText>
    <label>First Inscription Attempt</label>
    <type>Checkbox</type>
</CustomField>