force-app/main/default/objects/Order_Fulfillment__c/fields/Followup_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Send_Date__c</fullName>
    <formula>Shipped_Date__c  + 4</formula>
    <label>Followup Send Date</label>
    <type>Date</type>
</CustomField>