force-app/main/default/objects/Order_Fulfillment__c/fields/Forbes_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Forbes_Upload_Date__c</fullName>
    <formula>Market__r.Forbes_Upload_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forbes Upload Date</label>
    <type>Date</type>
</CustomField>