force-app/main/default/objects/Order_Fulfillment__c/fields/Fulfillment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>