force-app/main/default/objects/Order_Fulfillment__c/fields/Fulfillment_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Owner_Email__c</fullName>
    <formula>Fulfillment_Owner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Owner Email</label>
    <type>Text</type>
</CustomField>