force-app/main/default/objects/Order_Fulfillment__c/fields/Generated_Sgiz_URL__c.field-meta.xml
<CustomField>
    <fullName>Generated_Sgiz_URL__c</fullName>
    <label>Generated Sgiz URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>