force-app/main/default/objects/Order_Fulfillment__c/fields/Gift_Code__c.field-meta.xml
<CustomField>
    <fullName>Gift_Code__c</fullName>
    <formula>RIGHT( Name , FIND(&quot;-&quot;,  Name )+4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Code</label>
    <type>Text</type>
</CustomField>