force-app/main/default/objects/Order_Fulfillment__c/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <formula>Market__r.Web_Listings_Go_Live__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>