force-app/main/default/objects/Order_Fulfillment__c/fields/Graphics_Owner__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Owner__c</fullName>
    <formula>Market__r.Graphics_Assigned__r.User_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Graphics Owner</label>
    <type>Text</type>
</CustomField>