force-app/main/default/objects/Order_Fulfillment__c/fields/Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price__c</fullName>
    <formula>OrderProductLine__r.ListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>