force-app/main/default/objects/Order_Fulfillment__c/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <description>Linkedin URL from Contact Page - populated by Social Media Email Campaign Url</description>
    <formula>PrimaryRecipient__r.LinkedIn_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Linkedin URL mirrored off Contact Page</inlineHelpText>
    <label>LinkedIn URL</label>
    <type>Text</type>
</CustomField>