force-app/main/default/objects/Order_Fulfillment__c/fields/Magazine_Readership__c.field-meta.xml
<CustomField>
    <fullName>Magazine_Readership__c</fullName>
    <formula>Market__r.Magazine_Readership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magazine Readership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>