force-app/main/default/objects/Order_Fulfillment__c/fields/Market_Award_Year__c.field-meta.xml
<CustomField>
    <fullName>Market_Award_Year__c</fullName>
    <description>This field pulls the Award Year from the Market Project</description>
    <formula>Market__r.Publication_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Award Year</label>
    <type>Text</type>
</CustomField>