force-app/main/default/objects/Order_Fulfillment__c/fields/Market_Region__c.field-meta.xml
<CustomField>
    <fullName>Market_Region__c</fullName>
    <formula>Market__r.Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Region</label>
    <type>Text</type>
</CustomField>