force-app/main/default/objects/Order_Fulfillment__c/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <label>Next Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collect</fullName>
                <default>true</default>
                <label>Collect</label>
            </value>
            <value>
                <fullName>Collect Urgent</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Proof</fullName>
            </value>
            <value>
                <fullName>Make Revisions</fullName>
            </value>
            <value>
                <fullName>Send Proof</fullName>
            </value>
            <value>
                <fullName>Collect Revisions</fullName>
            </value>
            <value>
                <fullName>Fulfill</fullName>
            </value>
            <value>
                <fullName>Print Complaint</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Print Rush</fullName>
            </value>
            <value>
                <fullName>Print Post Sale</fullName>
            </value>
            <value>
                <fullName>Print Prep</fullName>
            </value>
            <value>
                <fullName>In Batch</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Crease</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Write copy</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>Make Revisions (CE)</fullName>
            </value>
            <value>
                <fullName>Schedule Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>