force-app/main/default/objects/Order_Fulfillment__c/fields/Next_Action_Xfer__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Xfer__c</fullName>
    <description>Hidden field, used to feed next action choices in to log a call flow.</description>
    <label>Next Action Xfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Change</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Collect</fullName>
            </value>
            <value>
                <fullName>Collect Urgent</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Proof</fullName>
            </value>
            <value>
                <fullName>Make Revisions</fullName>
            </value>
            <value>
                <fullName>Make Revisions (CE)</fullName>
            </value>
            <value>
                <fullName>Send Proof</fullName>
            </value>
            <value>
                <fullName>Collect Revisions</fullName>
            </value>
            <value>
                <fullName>Fulfill</fullName>
            </value>
            <value>
                <fullName>Print Complaint</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Print Rush</fullName>
            </value>
            <value>
                <fullName>Print Post Sale</fullName>
            </value>
            <value>
                <fullName>Crease</fullName>
            </value>
            <value>
                <fullName>Write Copy</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
                <isActive>false</isActive>
                <label>Close</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>