force-app/main/default/objects/Order_Fulfillment__c/fields/Order_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Service_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Service Line</label>
    <referenceTo>kugo2p__SalesOrderServiceLine__c</referenceTo>
    <relationshipLabel>Order Fulfillments</relationshipLabel>
    <relationshipName>Order_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>