force-app/main/default/objects/Order_Fulfillment__c/fields/OrderLine__c.field-meta.xml
<CustomField>
    <fullName>OrderLine__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+OrderProductLine__c, OrderProductLine__r.Product__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Line</label>
    <type>Text</type>
</CustomField>