force-app/main/default/objects/Order_Fulfillment__c/fields/Packaged__c.field-meta.xml
<CustomField>
    <fullName>Packaged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when an order is being prepared for shipping</description>
    <inlineHelpText>Order is ready for shipping</inlineHelpText>
    <label>Packaged</label>
    <type>Checkbox</type>
</CustomField>