force-app/main/default/objects/Order_Fulfillment__c/fields/Postcard_Type__c.field-meta.xml
<CustomField>
    <fullName>Postcard_Type__c</fullName>
    <formula>TEXT(OrderProductLine__r.Plaque_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcard Type</label>
    <type>Text</type>
</CustomField>