force-app/main/default/objects/Order_Fulfillment__c/fields/Primary_AM__c.field-meta.xml
<CustomField>
    <fullName>Primary_AM__c</fullName>
    <formula>OrderNumber__r.Opportunity__r.FSP_Sales_Rep__r.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary AM</label>
    <type>Text</type>
</CustomField>