force-app/main/default/objects/Order_Fulfillment__c/fields/PrimaryRecipient__c.field-meta.xml
<CustomField>
    <fullName>PrimaryRecipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Fulfillments</relationshipLabel>
    <relationshipName>Order_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>