force-app/main/default/objects/Order_Fulfillment__c/fields/Product_Delivered_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Delivered_Link__c</fullName>
    <description>Full link to final product.</description>
    <inlineHelpText>Full url of the final product goes here. NO PARTIAL LINKS!</inlineHelpText>
    <label>Product Delivered Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>