force-app/main/default/objects/Order_Fulfillment__c/fields/Product_Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Engagement_Status__c</fullName>
    <description>Field to track the status/health of a marketing service or product</description>
    <inlineHelpText>Status for tracking the health of a marketing service product</inlineHelpText>
    <label>Subscription Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>