force-app/main/default/objects/Order_Fulfillment__c/fields/Product_Style__c.field-meta.xml
<CustomField>
    <fullName>Product_Style__c</fullName>
    <description>This field is used to describe the client&apos;s selection of product style (e.g. &quot;Seasonal postcard&quot; or &quot;Award Announcement postcard&quot; or &quot;Recipe postcard&quot;</description>
    <inlineHelpText>This field is used to describe the client&apos;s selection of product style (e.g. &quot;Seasonal postcard&quot; or &quot;Award Announcement postcard&quot; or &quot;Recipe postcard&quot;</inlineHelpText>
    <label>Product Style</label>
    <length>250</length>
    <type>Text</type>
</CustomField>